; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/lpfc/extr_lpfc_init.c_lpfc_reset_hba.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/lpfc/extr_lpfc_init.c_lpfc_reset_hba.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lpfc_hba = type { %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i32 }

@LPFC_HBA_ERROR = common dso_local global i32 0, align 4
@LPFC_SLI_ACTIVE = common dso_local global i32 0, align 4
@LPFC_MBX_WAIT = common dso_local global i32 0, align 4
@LPFC_MBX_NO_WAIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lpfc_reset_hba(%struct.lpfc_hba* %0) #0 {
  %2 = alloca %struct.lpfc_hba*, align 8
  store %struct.lpfc_hba* %0, %struct.lpfc_hba** %2, align 8
  %3 = load %struct.lpfc_hba*, %struct.lpfc_hba** %2, align 8
  %4 = getelementptr inbounds %struct.lpfc_hba, %struct.lpfc_hba* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %11, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @LPFC_HBA_ERROR, align 4
  %9 = load %struct.lpfc_hba*, %struct.lpfc_hba** %2, align 8
  %10 = getelementptr inbounds %struct.lpfc_hba, %struct.lpfc_hba* %9, i32 0, i32 1
  store i32 %8, i32* %10, align 4
  br label %36

11:                                               ; preds = %1
  %12 = load %struct.lpfc_hba*, %struct.lpfc_hba** %2, align 8
  %13 = getelementptr inbounds %struct.lpfc_hba, %struct.lpfc_hba* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @LPFC_SLI_ACTIVE, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %11
  %20 = load %struct.lpfc_hba*, %struct.lpfc_hba** %2, align 8
  %21 = load i32, i32* @LPFC_MBX_WAIT, align 4
  %22 = call i32 @lpfc_offline_prep(%struct.lpfc_hba* %20, i32 %21)
  br label %27

23:                                               ; preds = %11
  %24 = load %struct.lpfc_hba*, %struct.lpfc_hba** %2, align 8
  %25 = load i32, i32* @LPFC_MBX_NO_WAIT, align 4
  %26 = call i32 @lpfc_offline_prep(%struct.lpfc_hba* %24, i32 %25)
  br label %27

27:                                               ; preds = %23, %19
  %28 = load %struct.lpfc_hba*, %struct.lpfc_hba** %2, align 8
  %29 = call i32 @lpfc_offline(%struct.lpfc_hba* %28)
  %30 = load %struct.lpfc_hba*, %struct.lpfc_hba** %2, align 8
  %31 = call i32 @lpfc_sli_brdrestart(%struct.lpfc_hba* %30)
  %32 = load %struct.lpfc_hba*, %struct.lpfc_hba** %2, align 8
  %33 = call i32 @lpfc_online(%struct.lpfc_hba* %32)
  %34 = load %struct.lpfc_hba*, %struct.lpfc_hba** %2, align 8
  %35 = call i32 @lpfc_unblock_mgmt_io(%struct.lpfc_hba* %34)
  br label %36

36:                                               ; preds = %27, %7
  ret void
}

declare dso_local i32 @lpfc_offline_prep(%struct.lpfc_hba*, i32) #1

declare dso_local i32 @lpfc_offline(%struct.lpfc_hba*) #1

declare dso_local i32 @lpfc_sli_brdrestart(%struct.lpfc_hba*) #1

declare dso_local i32 @lpfc_online(%struct.lpfc_hba*) #1

declare dso_local i32 @lpfc_unblock_mgmt_io(%struct.lpfc_hba*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
